--- a/index.html
+++ b/index.html
@@ -6,17 +6,8 @@
     <title>BAUBER SEGURIDAD</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    
-</head>
-    <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BAUBER SEGURIDAD</title>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-
     <!-- Meta-etiqueta de verificación de Google -->
-    <meta name="google-site-verification" content="google9025c12b9144f07c.html" />
+   <meta name="google-site-verification" content="HaKMFpUiQAM5niMiJ5yVAunoceZMSuyX_pX213rOoMQ" />
 </head>
 
 <body>
@@ -120,5 +111,6 @@
     </footer>
 </body>
 </html>
+
 
 
