--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>BAUBER SEGURIDAD</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+     <meta name="google-site-verification" content="HaKMFpUiQAM5niMiJ5yVAunoceZMSuyX_pX213rOoMQ" />
 </head>
 <body>
     <!-- HEADER -->
@@ -108,4 +109,5 @@
     </footer>
 </body>
 </html>
+
 
