--- a/index.html
+++ b/index.html
@@ -59,19 +59,19 @@
             <h2>Barrios que Cubrimos</h2>
             <div class="cards barrios-grid">
                 <div class="card">
-                    <img src="C:\Users\Martin\Documents\BAUBER\css\img\barrio 1.jpg" alt="Barrio 1">
+                    <img src="barrio 1.jpg" alt="Barrio 1">
                     <h3>Las Candelas 2</h3>
                 </div>
                 <div class="card">
-                    <img src="C:\Users\Martin\Documents\BAUBER\css\img\barrio 2.jpg" alt="Barrio 2">
+                    <img src="barrio 2.jpg" alt="Barrio 2">
                     <h3>Pueyrredon</h3>
                 </div>
                 <div class="card">
-                    <img src="C:\Users\Martin\Documents\BAUBER\css\img\barrio3.jpg" alt="Barrio 3">
+                    <img src="barrio3.jpg" alt="Barrio 3">
                     <h3>Palmares Valley</h3>
                 </div>
                 <div class="card">
-                    <img src="C:\Users\Martin\Documents\BAUBER\css\img\barrio 4.jpg" alt="Barrio 4">
+                    <img src="barrio 4.jpg" alt="Barrio 4">
                     <h3>Chacras de Farrel</h3>
                 </div>
             </div>
@@ -111,6 +111,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
